tests/baselines/reference/jsxFactoryMissingErrorInsideAClass(strict=true).errors.txt
test.tsx(3,16): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
test.tsx(3,17): error TS2304: Cannot find name 'factory'.
test.tsx(3,21): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== test.tsx (3 errors) ====
    export class C {
        factory() {
            return <div></div>;
                   ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                    ~~~
!!! error TS2304: Cannot find name 'factory'.
                        ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        }
    }
    